[package]
name = "anyrun-websearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { path = "anyrun-plugin" }
abi_stable = "0.11.1"
ron = "0.8.0"
open = "4"
serde = { version = "1.0.152", features = ["derive"] }
